SonarQube integration.